@@ -8,3 +8,5 @@
 * 4e98a31 feat:add VERSION so we have a single source of version information
 10/11/2015 Version 1.3.0:
 * 394d155 (HEAD, master) add date and comments to version
+12/11/2015 Version 1.3.1:
+* 8185ea0 (HEAD, master) add help on product code explanation and generation
